Add standalone exe packaging support
- Add ResourcePath utility to resolve resources relative to the jar location
  so the app works correctly when launched from any working directory
- Add Launcher wrapper class required by jpackage
- Replace Paths.get() with ResourcePath.of() across all view classes
- Add package.bat to automate jpackage build into dist/Tetris/
- Add dist/, package-input/, sources.txt to .gitignore

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>